--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -98,7 +98,7 @@ header-includes   :
   library(sjPlot)       # plot MLM model fit
   library(kableExtra)   # for great tables in R Markdown
   library(interactions) # for simple slopes analysis
-  library(huxtable)     # create huxtable
+  #library(huxtable)     # create huxtable
   library(glmmTMB)      # from the glmmTMB package for multi level models
   library(BayesFactor)  # computing Bayes factors, "BayesFactor" package
   library(ggplot2)      # for plotting, "ggplot2" package
