--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -1862,12 +1862,12 @@ Mental subscale ANOVA:
 Mental subscale paired contrasts:
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE} 
-apa_table(
-  hypothesis1c_mental_contrasts
-  , caption = "Paired contrasts for rmANOVA hypothesis 1c mental XXX"
-  , note = "XXX."
-  , escape = TRUE
-)
+#apa_table(
+#  hypothesis1c_mental_contrasts
+#  , caption = "Paired contrasts for rmANOVA hypothesis 1c mental XXX"
+#  , note = "XXX."
+#  , escape = TRUE
+#)
 ```
 
 
@@ -1878,12 +1878,12 @@ Physical subscale ANOVA:
 Physical subscale paired contrasts:
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE} 
- apa_table(
-   hypothesis1c_physical_contrasts
-   , caption = "Paired contrasts for rmANOVA hypothesis 1c physical XXX"
-   , note = "XXX."
-   , escape = TRUE
- )
+#apa_table(
+#  hypothesis1c_physical_contrasts
+#  , caption = "Paired contrasts for rmANOVA hypothesis 1c physical XXX"
+#  , note = "XXX."
+#  , escape = TRUE
+#)
 ```
 
 
@@ -1894,12 +1894,12 @@ Time subscale ANOVA:
 Time subscale paired contrasts:
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE} 
- apa_table(
-   hypothesis1c_time_contrasts
-   , caption = "Paired contrasts for rmANOVA hypothesis 1c time XXX"
-   , note = "XXX."
-   , escape = TRUE
- )
+#apa_table(
+#  hypothesis1c_time_contrasts
+#  , caption = "Paired contrasts for rmANOVA hypothesis 1c time XXX"
+#  , note = "XXX."
+#  , escape = TRUE
+#)
 ```
 
 Performance subscale ANOVA:
@@ -1909,12 +1909,12 @@ Performance subscale ANOVA:
 Performance subscale paired contrasts:
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE} 
- apa_table(
-   hypothesis1c_performance_contrasts
-   , caption = "Paired contrasts for rmANOVA hypothesis 1c performance XXX"
-   , note = "XXX."
-   , escape = TRUE
- )
+#apa_table(
+#  hypothesis1c_performance_contrasts
+#  , caption = "Paired contrasts for rmANOVA hypothesis 1c performance XXX"
+#  , note = "XXX."
+#  , escape = TRUE
+#)
 ```
 
 
@@ -1925,12 +1925,12 @@ Effort subscale ANOVA:
 Effort subscale paired contrasts:
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE} 
- apa_table(
-   hypothesis1c_effort_contrasts
-   , caption = "Paired contrasts for rmANOVA hypothesis 1c effort XXX"
-   , note = "XXX."
-   , escape = TRUE
- )
+#apa_table(
+#  hypothesis1c_effort_contrasts
+#  , caption = "Paired contrasts for rmANOVA hypothesis 1c effort XXX"
+#  , note = "XXX."
+#  , escape = TRUE
+#)
 ```
 
 Frustration subscale ANOVA:
@@ -1941,12 +1941,12 @@ Frustration subscale paired contrasts:
 
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE} 
- apa_table(
-   hypothesis1c_frustration_contrasts
-   , caption = "Paired contrasts for rmANOVA hypothesis 1c frustration XXX"
-   , note = "XXX."
-   , escape = TRUE
- )
+#apa_table(
+#  hypothesis1c_frustration_contrasts
+#  , caption = "Paired contrasts for rmANOVA hypothesis 1c frustration XXX"
+#  , note = "XXX."
+#  , escape = TRUE
+#)
 ```
 
 
@@ -1959,12 +1959,12 @@ ANOVA:
 Paired contrasts:
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE} 
- apa_table(
-   hypothesis2a_contrasts
-   , caption = "Paired contrasts for rmANOVA hypothesis 2a XXX"
-   , note = "XXX."
-   , escape = TRUE
- )
+#apa_table(
+#  hypothesis2a_contrasts
+#  , caption = "Paired contrasts for rmANOVA hypothesis 2a XXX"
+#  , note = "XXX."
+#  , escape = TRUE
+#)
 ```
 
 ### Hypothesis 2b: Subjective values decline with increasing n-back level, even after controlling for declining task performance measured by signal detection d’ and reaction time.
@@ -1979,12 +1979,12 @@ Multi level model:
 Simple slopes analysis:
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
-apa_table(
-  h2c_ss.table
-  , caption = "Simple slope analysis of SVs...XXX"
-  , note = "XXX."
-  , escape = FALSE
-)
+#apa_table(
+#  h2c_ss.table
+#  , caption = "Simple slope analysis of SVs...XXX"
+#  , note = "XXX."
+#  , escape = FALSE
+#)
 ```
 
 ```{r FigHyp2c, echo=FALSE, message=FALSE, warning=FALSE, fig.cap="Simple slopes analysis for how n-back level predicts the subjective value, depending on the participant's NFC. NFC = Need for Cognition, SD = standard deviation."}
