--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -1862,12 +1862,12 @@ Mental subscale ANOVA:
 Mental subscale paired contrasts:
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE} 
-#apa_table(
-#  hypothesis1c_mental_contrasts
-#  , caption = "Paired contrasts for rmANOVA hypothesis 1c mental XXX"
-#  , note = "XXX."
-#  , escape = TRUE
-#)
+apa_table(
+  hypothesis1c_mental_contrasts
+  , caption = "Paired contrasts for rmANOVA hypothesis 1c mental XXX"
+  , note = "XXX."
+  , escape = TRUE
+)
 ```
 
 
