--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -1878,12 +1878,12 @@ Physical subscale ANOVA:
 Physical subscale paired contrasts:
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE} 
-#apa_table(
-#  hypothesis1c_physical_contrasts
-#  , caption = "Paired contrasts for rmANOVA hypothesis 1c physical XXX"
-#  , note = "XXX."
-#  , escape = TRUE
-#)
+apa_table(
+  hypothesis1c_physical_contrasts
+  , caption = "Paired contrasts for rmANOVA hypothesis 1c physical XXX"
+  , note = "XXX."
+  , escape = TRUE
+)
 ```
 
 
